# Road-to-MLOps

./: .gitignore  README.md
01-primer/: homework-2023.ipynb  homework.ipynb  pyproject.toml
02-experiment-tracking/: README.md  pyproject.toml
02-experiment-tracking/homework/: homework.ipynb  hpo.py  register_model.py
03-orchestration/prefect-orion/: conda_environment.yml  homework.ipynb  homework.py
