[tool.poetry]
name = "Linear Regression NYC Taxi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = ">= 1.2.2"
seaborn = ">= 0.12.2"
pyarrow = ">= 12.0.0"

[tool.poetry.dev-dependencies]
ipykernel = ">= 6.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
